---------------------------------------------------------------------------------------------------
Version: 2.5.3
Date: ????
  Bugfixes:
    - Fixed that changes to object availability would not apply when opening the GUI while preserve session is enabled (credit to kubiix)
---------------------------------------------------------------------------------------------------
Version: 2.5.2
Date: 2021-02-17
  Bugfixes:
    - Fixed a crash when an infinite technology only has one level (#44)
    - Fixed a crash when researching a previously-disabled technology (#44)
---------------------------------------------------------------------------------------------------
Version: 2.5.1
Date: 2021-02-17
  Bugfixes:
    - Fixed a crash when a character entity had an item to place it (#43)
---------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: 2021-02-17
  Features:
    - Added controls for navigating the session history, bound by default to the back and forward buttons on the mouse
    - Added default recipe category excludes for Creative Mod and the PySuite
    - Added fluid temperature support (thanks kubiix!)
      - When searching, temperatures and temperature ranges for each fluid will be shown as well
      - Each temperature and temperature range has a separate fluid page listing the properties specific to that temperature or range
      - Each fluid still has a non-temperature page that shows all properties for that fluid
    - Added highlight on the last selected item (configurable)
    - Added "made in" to the recipe quick reference panel
    - Added required fluid to resource tooltip
    - Added "placeable by" and "unlocked by" to the crafter page
    - Added help message when viewing a blank page
    - Added technology page and search category (credit to kubiix)
  Changes:
    - Adjusted glyph sizing to fix alignment
    - Adjusted titlebar styling to match the base game