@@ -6,6 +6,6 @@
   "contact": "Discord: Raiguard#7402",
   "homepage": "https://github.com/raiguard/Factorio-RecipeBook",
   "factorio_version": "1.1",
-  "dependencies": ["? base >= 1.1.24", "flib >= 0.7.0"],
+  "dependencies": ["? base >= 1.1.26", "flib >= 0.7.0"],
   "description": "Search for information about crafters, fluids, items recipes, and technologies in a clean, easy-to-use interface. Similar to FNEI and What is it Really Used For."
 }
