@@ -75,10 +75,10 @@ recipe-categories=Recipe categories [img=info]
 recipe=Recipe
 remove-from-favorites=Remove from favorites
 required-fluid=Required fluid:
-research-ingredients-per-unit=Research ingredients per unit (__1__)
 research-ingredients-per-unit-tooltip=Research ingredients per unit:
-research-units=Units required to research
+research-ingredients-per-unit=Research ingredients per unit (__1__)
 research-units-tooltip=Units required to research:
+research-units=Units required to research
 researching-speed=Researching speed:
 resource=Resource
 results-limited=Results limited to __1__ items
@@ -94,10 +94,8 @@ seconds=__1__ seconds
 session-history=Session history
 setting-highlight_last_selected-tooltip=If enabled, the last selected item will be highlighted. This is useful when flipping back and forth between a list and its contents.
 setting-highlight_last_selected=Highlight last selected item [img=info]
-setting-open_fluid_hotkey-tooltip=If enabled, using the Recipe Book hotkey while hovering over a pipe, pump, storage tank, or fluid wagon will open that fluid's page, if it exists.
-setting-open_fluid_hotkey=Open selected fluid on hotkey [img=info]
-setting-open_item_hotkey-tooltip=If enabled, using the Recipe Book hotkey while holding an item will open that item's page, if it exists.\nYou can also do this by clicking the RB shortcut while holding an item.
-setting-open_item_hotkey=Open held item on hotkey [img=info]
+setting-open_selected_object-tooltip=Hovering over any crafter, fluid, item, recipe, or technology anywhere in the game and using the Recipe Book hotkey will open that object's page.
+setting-open_selected_object=Open selected object on hotkey [img=info]
 setting-preserve_session-tooltip=If checked, opening the Recipe Book will pick up where you left off. If unchecked, the home page will be shown instead.
 setting-preserve_session=Preserve session [img=info]
 setting-show_alternate_name-tooltip=The object's alternate (internal) name will be shown in the object's tooltip. If `use internal names` is enabled, this will show the regular (localised) name.
